<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yuraima.quest.AddQuestActivity"
    tools:showIn="@layout/activity_add_item"
    android:id="@+id/o">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:maxLines="1"
        android:lines="1"
        android:ellipsize="end"
        android:maxLength="40"
        android:imeOptions="actionDone"
        android:hint="@string/editNameInputMessage"
        android:id="@+id/editName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="140"
        android:ems="10"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:id="@+id/editDesc"
        android:hint="@string/editDescriptionText"
        android:layout_above="@+id/descWarning"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addBtnText"
        android:id="@+id/addBtn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/descWarningText"
        android:id="@+id/nameWarning"
        android:visibility="invisible"
        android:textColor="#c62828"
        android:layout_below="@+id/editName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/descWarningText"
        android:id="@+id/descWarning"
        android:visibility="invisible"
        android:textColor="#c62828"
        android:layout_above="@+id/calendarBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarBtnText"
        android:id="@+id/calendarBtn"
        android:layout_above="@+id/addBtn"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
